<resources>
    <string name="app_name">CommunityRecipes</string>
    <string name="app_title" translatable="false">Community Recipes</string>
    <string name="my_name_and_id">Lidor Eliyahu Shelef, 123456789</string>
    <string name="loading_categories_error">We had some error getting the data, please restart the application</string>
    <string name="recipes_categories"><u>Recipes Categories</u></string>
    <string name="submit_recipe"><u>Submit Recipe</u></string>
    <string name="featured_recipe_placeholder" translatable="false">Featured Recipe Placeholder</string>
    <string name="_error_" translatable="false">ERROR:\t</string>
    <string name="upload_recipe_image">Upload Recipe Image</string>
    <string name="loading">Loading…</string>
    <string name="apply_configurations">Apply Configurations</string>
    <string name="music_not_playing">Music Not Playing</string>
    <string name="music_playing">Music Playing</string>
    <string name="rate_the_recipe">Rate The Recipe</string>
    <string name="add_a_recipe">Add A Recipe</string>
    <string name="settings">Settings</string>
    <string name="like_recipe"><b><u>Like Recipe</u></b></string>
    <string name="dislike_recipe"><b><u>Dislike Recipe</u></b></string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="login_or_register">Login or Register</string>
    <string name="got_it">Got It!</string>
    <string name="enter_preparation">Enter A Preparation</string>
    <string name="enter">Enter</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="insert_name_here">Insert name here</string>
    <string name="recipe_time">Recipe Time</string>
    <string name="hours">hours:</string>
    <string name="minutes">minutes:</string>
    <string name="preparations">Preparations:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="ingredients_example">Example: Green Beans 300g, Garlic 1tbs, Carrots 2 chopped</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="discard">Discard</string>
    <string name="l_es_logo" translatable="false">L-ES logo</string>
    <string name="minutes_raw">minutes</string>
    <string name="minutes_example" translatable="false">45</string>
    <string name="hours_raw">hours</string>
    <string name="hours_example" translatable="false">02</string>
    <string name="average_time">Average Time:</string>
    <string name="featured_recipe">Featured Recipe</string>
    <string name="music_image" translatable="false">Music Image</string>
    <string name="credits_image" translatable="false">Credits Image</string>
    <string name="credits">Credits</string>
    <string name="name_semicolon">Name:</string>
    <string name="amount_semicolon">Amount:</string>
    <string name="remove_image">Remove Image</string>
    <string name="cook_reminder">Cook Reminder</string>
    <string name="dislike_image" translatable="false">Dislike Image</string>
    <string name="like_image" translatable="false">Like Recipe</string>
    <string name="song_name">Song Name</string>
    <string name="retake_photo">Retake Photo</string>
    <string name="good_photo">Good Photo</string>
    <string name="_1" translatable="false">1</string>
    <string name="listview_iem_symbol"><![CDATA[>]]></string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="pay_us">Pay Us First Matey ;)</string>
    <string name="signed_out">Signed out</string>
    <string name="email_exception">There is no email client installed mate !</string>
    <string name="login_fail_msg">Something has failed, please try again later…</string>
    <string name="login_logged_in_msg">You are logged in mate !</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="email_in_use_msg">Email is already in use, try again mate…</string>
    <string name="recipe_image_load_fail_msg">Unable to read recipe image, please try again later mate ;)</string>
    <string name="validation_warning_recipe_name">Please provide the name of the recipe mate!</string>
    <string name="validation_warning_avg_time">Please provide the time it takes to prepare this recipe mate!</string>
    <string name="validation_warning_preparations">Please Provide at least one preparation mate!</string>
    <string name="validation_warning_ingredients">Please Provide at least one ingredient mate!</string>
    <string name="upload_success">Upload Success :)</string>
    <string name="upload_failed">Upload Failed, Please try again later. . .</string>
    <string name="recipe_created">Recipe Created !</string>
    <string name="recipe_creation_failed">Recipe Creation Failed !</string>
    <string name="get_featured">Get Featured</string>
    <string name="notifications">Notifications</string>
    <string name="rate_us">Rate Us</string>
    <string name="check_other_apps">Check Other Apps</string>
    <string name="logout">Logout</string>
    <string name="rate_updated">Rates Updated !</string>
    <string name="rate_update_fail">Update Failed, Please try again later.</string>
    <string name="no_recipe_text">No Recipes For This Category Yet!</string>
    <string name="no_recipe_button_text">Add The First Recipe!</string>
    <string name="email_not_valid">Email not valid!</string>
    <string name="password_length_error">Password must be at least 6 characters long!</string>
</resources>
