<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/neu_bg"
    android:weightSum="100"
    tools:ignore="NestedWeights"
    tools:context=".AddRecipePageActivity">

    <include
        android:id="@+id/toolbar_add_recipe"
        layout="@layout/recipe_toolbar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar_add_recipe"
        >

        <LinearLayout
            android:id="@+id/container_upload_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            android:weightSum="2"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/recipe_image"
                android:textColor="@color/neu_text_color"
                android:gravity="center_vertical"
                android:layout_weight="0.5" />

            <ImageView
                android:id="@+id/image_view_recipe_image"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:src="@drawable/general_food"
                android:layout_weight="0.5"
                android:contentDescription="@string/recipe_image" />

            <soup.neumorphism.NeumorphButton
                android:id="@+id/button_upload_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/upload_recipe_image"
                android:textColor="@color/neu_text_color"
                android:gravity="center"
                android:textAllCaps="false"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            android:weightSum="2"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/recipe_name"
                android:textColor="@color/neu_text_color"
                android:gravity="center_vertical"
                android:layout_weight="0.5"/>

            <EditText
                android:id="@+id/edit_text_recipe_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:textColor="@color/neu_text_color"
                android:textColorHint="@color/neu_text_color"
                android:layout_weight="1.5"
                android:hint="@string/insert_name_here"
                app:backgroundTint="@color/black"
                android:autofillHints="name"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_average_time"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            android:weightSum="2"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/recipe_time"
                android:textColor="@color/neu_text_color"
                android:gravity="center_vertical"
                android:layout_weight="0.5"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:weightSum="4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/hours"
                    android:gravity="center"
                    android:textColor="@color/neu_text_color"
                    android:layout_weight="1"/>

                <NumberPicker
                    android:id="@+id/number_picker_hours"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/neu_text_color"
                    android:theme="@style/DefaultNumberPickerTheme"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/minutes"
                    android:gravity="center"
                    android:textColor="@color/neu_text_color"
                    android:layout_weight="1"/>

                <NumberPicker
                    android:id="@+id/number_picker_minutes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/neu_text_color"
                    android:theme="@style/DefaultNumberPickerTheme"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_preparations"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            android:layout_weight="30"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/preparations"
                    android:textColor="@color/neu_text_color"
                    android:gravity="center_vertical"
                    android:layout_weight="0.5"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:weightSum="3">

                    <EditText
                        android:id="@+id/edit_text_preparation"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/neu_text_color"
                        android:textColorHint="@color/neu_text_color"
                        android:textColor="@color/neu_text_color"
                        android:hint="@string/enter_preparation"
                        android:layout_weight="2"
                        android:autofillHints="name"
                        android:inputType="text" />

                    <Button
                        android:id="@+id/button_preparation_add"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:text="@string/enter"
                        android:textAllCaps="false"
                        android:layout_weight="1"/>

                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_add_recipe_preparations"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_ingredients"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:paddingEnd="10sp"
            android:paddingStart="10sp"
            android:layout_weight="30"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/ingredients"
                    android:textColor="@color/neu_text_color"
                    android:gravity="center_vertical"
                    android:layout_weight="0.5"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@color/neu_text_color"
                    android:autoSizeTextType="uniform"
                    android:lines="1"
                    android:text="@string/ingredients_example"
                    android:layout_weight="1.5"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3.5">

                <EditText
                    android:id="@+id/edit_text_add_ingredient_name"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/neu_text_color"
                    android:textColorHint="@color/neu_text_color"
                    android:textColor="@color/neu_text_color"
                    android:hint="@string/name"
                    android:layout_weight="1.35"
                    android:autofillHints="name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/edit_text_add_ingredient_amount"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/neu_text_color"
                    android:textColorHint="@color/neu_text_color"
                    android:textColor="@color/neu_text_color"
                    android:hint="@string/amount"
                    android:layout_weight="1.35"
                    android:autofillHints="name"
                    android:inputType="text" />

                <Button
                    android:id="@+id/button_ingredient_add"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeMaxTextSize="16sp"
                    android:text="@string/enter"
                    android:textAllCaps="false"
                    android:layout_weight="0.8"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_add_recipe_ingredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:weightSum="3">

            <Spinner
                android:id="@+id/spinner_categories"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:drawSelectorOnTop="true"
                android:layout_weight="1"
                android:textColor="#000000"
                android:backgroundTint="@color/neu_text_color"
                android:spinnerMode="dropdown"/>

            <soup.neumorphism.NeumorphButton
                android:id="@+id/button_discard"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:text="@string/discard"
                android:gravity="center"
                android:textColor="@color/neu_text_color"
                android:textAllCaps="false"
                android:layout_weight="1"/>

            <soup.neumorphism.NeumorphButton
                android:id="@+id/button_submit_recipe"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:text="@string/submit_recipe"
                android:gravity="center"
                android:textColor="@color/neu_text_color"
                android:textAllCaps="false"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativelayout_login_or_register_alert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/bg_darker_gray"
        android:layout_below="@+id/toolbar_add_recipe">

        <Button
            android:id="@+id/button_login_or_register_alert"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/login_or_register"
            android:padding="12sp"
            android:textColor="@color/teal_200"
            android:layout_centerInParent="true"
            android:textAllCaps="false" />

    </RelativeLayout>

</RelativeLayout>