<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neu_bg"
    tools:context=".EntranceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageview_l_es"
            android:src="@drawable/l_es"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_margin="10sp"
            android:contentDescription="@string/l_es_logo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75">

            <TextView
                android:id="@+id/textview_app_title"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeTextType="uniform"
                android:elevation="10sp"
                android:fontFamily="@font/tinos_bold"
                android:text="@string/app_title"
                android:textAlignment="center"
                android:textColor="@color/neu_text_color" />

            <RelativeLayout
                android:id="@+id/app_logo_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15sp">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:lottie_rawRes="@raw/chefs_hat"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        tools:ignore="UselessParent">

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:rotation="-45"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/wok_pan"
                            tools:ignore="NestedWeights" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_name_and_id"
            android:layout_marginTop="25sp"
            android:fontFamily="@font/tinos_bold_italic"
            android:textColor="@color/neu_text_color"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/textview_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:textAlignment="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>